# ficus_sensor

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.old
components/adc/: CMakeLists.txt  adc.cpp  adc.hh
components/channel_linking/: channels.hh  endpoint.hh  router.hh
components/hal/: adc_hal.hh  errors.hh  onewire_hal.hh
components/in_hal/: adc_hal.hh  in_errors.hh  onewire_hal.hh
components/onewire/: CMakeLists.txt  onewire_bus.cpp  onewire_bus.hh
components/sensors/: CMakeLists.txt  sensor.cpp  sensor.hh  sensor_endpoint.cpp  sensor_endpoint.hh
components/sensors/humidity_sensors/: analog_humidity_sensor.cpp  analog_humidity_sensor.hh
components/sensors/temperature_sensors/: ds18b20.cpp  ds18b20.hh
components/threading/: CMakeLists.txt  task.hh  task_manager.cpp  task_manager.hh
core/channel_linking/: channels.hh  conversions.hh  router.hh
core/fic_hal/: CMakeLists.txt  adc_hal.hh  fic_errors.hh  gpio_hal.hh  hal_registry.cpp  hal_registry.hh  http_hal.hh  led_hal.hh  onewire_hal.hh  queue_hal.hh  sntp_hal.hh  task_hal.hh  wifi_hal.hh
core/fic_log/: CMakeLists.txt  fic_log.cpp  fic_log.hh
core/fic_time/: CMakeLists.txt  fic_time.cpp  fic_time.hh
core/in_hal/: CMakeLists.txt  in_errors.hh  led_hal.hh  onewire_hal.hh
core/pooling/: object_pool.hh
core/sensor_adapters/: CMakeLists.txt  sensor_endpoints.hh
core/sensors/: CMakeLists.txt  sensor.hh  sensor_endpoint.cpp  sensor_endpoint.hh  sensor_endpoint_factory.cpp  sensor_endpoint_factory.hh  sensor_endpoints.hh
core/sensors/humidity_sensors/: analog_humidity_sensor.cpp  analog_humidity_sensor.hh
core/sensors/temperature_sensors/: ds18b20.cpp  ds18b20.hh
core/signalling/: CMakeLists.txt  base_signalling.hh  led_signalling.cpp  led_signalling.hh  rgb_signalling.cpp  rgb_signalling.hh
core/threading/: CMakeLists.txt  task.hh  task_manager.cpp  task_manager.hh
core/time/: CMakeLists.txt  timer.hh
core/tls/: CMakeLists.txt  credentials_provider.hh
core/versioning/: core_version.hh  version.hh
espressif_hal/: espressif_hal_version.hh
espressif_hal/adc/: CMakeLists.txt  adc.cpp  adc.hh
espressif_hal/esp_fic_log/: CMakeLists.txt  esp_fic_log.cpp  esp_fic_log.hh
espressif_hal/esp_fic_time/: CMakeLists.txt  esp_time.hh
espressif_hal/http_client/: CMakeLists.txt  http_client.cpp  http_client.hh  http_plain_client.hh  https_client.hh
espressif_hal/leds/: CMakeLists.txt  led_strip_single.cpp  led_strip_single.hh
espressif_hal/onewire/: CMakeLists.txt  onewire_bus.cpp  onewire_bus.hh
espressif_hal/sntp/: CMakeLists.txt  (+2 more)
firebase_stack/: CMakeLists.txt  firebase_channel.hh  firebase_encoder.hh  firebase_endpoint.cpp  firebase_endpoint.hh  firebase_stack_version.hh  firebse_endpoint.hh
freertos_hal/: freertos_hal_version.hh
main/: CMakeLists.txt  adc.c  adc.h  composition.cpp  composition.hh  config.json  ds18b20.c  ds18b20.h  ds18b20_types.h  endpoints.hh  ficus_sensor_main.cpp  hardware.hh  hello_world_main.c  idf_component.yml  routing.hh
(+18 files in other folders)
